# Smart-Support

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  api_err.txt  api_out.txt  demo.py  docker-compose.yml  e2e_test.py  main.py  models.ipynb  models.py  models_m2.py  pyproject.toml
api/: main.py  queue_store.py  schemas.py  worker.py
backend/: Dockerfile  config.py
backend/api/: main.py
backend/data/: augmentation.py  dataset_loader.py
backend/evaluation/: evaluator.py
backend/models/: distilbert_classifier.py  tfidf_logreg.py  tfidf_svc.py
backend/preprocessing/: text_cleaner.py
backend/routing/: broker.py  circuit_breaker.py  deduplicator.py  queue.py  redis_broker.py  router.py  skill_router.py  urgency.py  urgency_regressor.py  webhook.py
backend/saved_models/: distilbert_head.joblib
backend/scripts/: train.py
backend/tests/: test_api.py  test_concurrency.py  test_dedup.py  test_m2_m3.py  test_svc.py
evaluation/: evaluator.py
evaluation/artifacts/distilbert/: metrics.json
evaluation/artifacts/tfidf_logreg/: metrics.json
evaluation/artifacts/tfidf_svc/: metrics.json
frontend/: Dockerfile  dash_app.py  index.html
model_cache/: m1.joblib  m1_metrics.json  m2.joblib  m2_metrics.json
saved_models/: tfidf_logreg.joblib  tfidf_svc.joblib  urgency_regressor.joblib
scripts/: train.py
src/: __init__.py  config.py
src/data/: augmentation.py  dataset_loader.py  synthetic_generator.py
src/models/: distilbert_classifier.py  tfidf_logreg.py  tfidf_svc.py
src/routing/: circuit_breaker.py  deduplicator.py  queue.py  router.py  skill_router.py  urgency.py  urgency_regressor.py  webhook.py
tests/: test_api.py  test_distilbert.py  test_m2_m3.py  test_svc.py  test_synthetic.py
