[project]
name = "smart-support"
version = "0.2.0"
description = "Smart-Support Ticket Routing Engine"
requires-python = ">=3.13"
dependencies = [
    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-dotenv>=1.0",
    # ML — Milestone 1
    "scikit-learn>=1.5",
    "pandas>=2.2",
    "numpy>=2.0",
    "joblib>=1.4",
    # ML — Milestone 2
    "torch>=2.3",
    "transformers>=4.42",
    "tqdm>=4.66",
    # Async broker — Milestone 2
    "arq>=0.26",
    "redis>=5.0",
    # HTTP client for webhooks
    "httpx>=0.27",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]
