[project]
name = "smart-support"
version = "0.1.0"
description = "AI-powered customer support ticket routing system"
requires-python = ">=3.13"
dependencies = [
    "scikit-learn>=1.5",
    "pandas>=2.2",
    "numpy>=1.26",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "joblib>=1.4",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "torch>=2.4",
    "transformers>=4.46",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
